--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   json_annotation: ^2.4.0
   provider: ^3.0.0+1
   shared_preferences: ^0.5.2+1
+  vibrate: ^0.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
