--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   shared_preferences: ^0.5.2+1
   vibrate: ^0.0.4
   audioplayers: ^0.13.2
-  flutter_swiper: ^1.1.6
+  flutter_ringtone_player: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
